--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,11 +1,12 @@
-FROM python:3.6.2
+FROM python:3.7.3
 
 COPY . /usr/app
-
 WORKDIR /usr/app
+
+ENV FLASK_APP=run.py
 
 RUN pip install -r requirements.txt
 
-ENTRYPOINT ["python"]
+EXPOSE 5000
 
-CMD ["run.py"]
+CMD ["flask", "run", "--host=0.0.0.0"]
