--- a/proxy/Dockerfile
+++ b/proxy/Dockerfile
@@ -1,5 +1,8 @@
 FROM nginx
 
+# Delete the default welcome to nginx page.
+RUN rm /usr/share/nginx/html/*
+
 COPY ./default.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
