--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -1,3 +1,8 @@
+upstream web {
+  server web:5000;
+}
+
+
 server {
     listen       80;
     #server_name  localhost;
@@ -6,15 +11,15 @@ server {
     #access_log  /var/log/nginx/host.access.log  main;
 
     location / {
-        proxy_pass http://web:5000;
+        proxy_pass http://web;
 
        # Redefine the header fields that NGINX sends to the upstream server
-       proxy_set_header Host $host;
-       proxy_set_header X-Forwarded-Proto $scheme;
-       proxy_set_header X-Real-IP $remote_addr;
-       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
  
        # Define the maximum file size on file uploads
-       client_max_body_size 5M;
+        client_max_body_size 5M;
     }
 }
