--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -1,3 +1,7 @@
+upstream api {
+  server api:5000;
+}
+
 upstream web {
   server web:5000;
 }
@@ -9,6 +13,19 @@ server {
 
     charset utf-8;
     #access_log  /var/log/nginx/host.access.log  main;
+
+        location /api/v2 {
+        proxy_pass http://api/api/v2;
+
+       # Redefine the header fields that NGINX sends to the upstream server
+        proxy_set_header Host "localhost";
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+ 
+       # Define the maximum file size on file uploads
+        client_max_body_size 5M;
+    }
 
     location / {
         proxy_pass http://web;
