--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,16 @@
-FROM python:3.7-alpine
+FROM python:alpine
 
 WORKDIR /backend
 COPY requirements.txt .
 
-RUN pip install -r requirements.txt 
+RUN apk add --no-cache --virtual .build-deps \
+		gcc \
+		musl-dev \
+        python3-dev \
+        libffi-dev \
+        openssl-dev \
+	&& pip install -r requirements.txt \
+	&& apk del .build-deps
 
 COPY ./src /backend
 ENV FLASK_APP=api.py
